# StudyOpenGl

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  studyopengl30.cpp
app/src/main/cpp/render/: EGLRender.cpp  EGLRender.h  MyGLRenderContext.cpp  MyGLRenderContext.h
app/src/main/cpp/sample/: AvatarSample.cpp  AvatarSample.h  BasicLightingSample.cpp  BasicLightingSample.h  BezierCurveSample.cpp  BezierCurveSample.h  BigEyesSample.cpp  BigEyesSample.h  BlendingSample.cpp  BlendingSample.h  CoordSystemSample.cpp  CoordSystemSample.h  DepthTestingSample.cpp  DepthTestingSample.h  FBOBlitSample.cpp  FBOBlitSample.h  FBOLegLengthenSample.cpp  FBOLegLengthenSample.h  FBOSample.cpp  FBOSample.h  FaceSlenderSample.cpp  FaceSlenderSample.h  GLSampleBase.h  Instancing3DSample.cpp  Instancing3DSample.h  InstancingSample.cpp  InstancingSample.h  MRTSample.cpp  MRTSample.h  NV21TextureMapSample.cpp  NV21TextureMapSample.h  PBOSample.cpp  PBOSample.h  ParticlesSample.cpp  ParticlesSample.h  RotaryHeadSample.cpp  RotaryHeadSample.h  ScratchCardSample.cpp  ScratchCardSample.h  ShockWaveSample.cpp  (+15 more)
app/src/main/cpp/util/: CommonDef.h  GLUtils.cpp  GLUtils.h  ImageDef.h  LogUtils.h  MySyncLock.h
app/src/main/res/layout/: activity_avatar.xml  activity_avo_vbo.xml  activity_basic_lighting.xml  activity_bezier_circle.xml  activity_bezier_curve.xml  activity_big_eyes.xml  activity_blending.xml  activity_coord_system.xml  activity_depth_testing.xml  activity_draw_triangle.xml  activity_eglactivity.xml  activity_face_slender.xml  activity_fbo.xml  activity_fbo_blit.xml  activity_fboleg_lengthen.xml  activity_instancing.xml  activity_main.xml  activity_mrtactivity.xml  activity_multi_lights.xml  activity_particles.xml  activity_pboactivity.xml  activity_rotary_head.xml  activity_scratch_card.xml  activity_shock_wave.xml  activity_sky_box.xml  activity_stencil_testing.xml  activity_texture_mapping.xml  activity_transform_feedback.xml  activity_visualize_audio.xml  activity_yuv_render.xml
app/src/main/res/raw/: avatar_f.frag  avatar_f_blur.frag  avatar_v.vert  (+20 more)
doc/: 使用纹理 texture 的套路.md
(+40 files in other folders)
